Modernize bean generation code
* Also fix PMD config